@@ -13,7 +13,6 @@ import pt.ua.tqs.voltconnect.repositories.BrandRepository;
 import pt.ua.tqs.voltconnect.services.BrandService;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -29,7 +28,7 @@ public class BrandServiceImpl implements BrandService {
     public List<BrandDTO> getAllBrands() {
         return brandRepository.findAll().stream()
                 .map(this::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -43,7 +42,7 @@ public class BrandServiceImpl implements BrandService {
     public List<BrandDTO> getBrandByName(String name) {
         return brandRepository.findByNameIgnoreCase(name).stream()
                 .map(this::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private BrandDTO toDTO(Brand brand) {
@@ -56,10 +55,12 @@ public class BrandServiceImpl implements BrandService {
 
     @Override
     public void importAllBrands(boolean force) {
+        if (!force && brandRepository.count() > 0) {
+            return;
+        }
+
         if (force) {
             brandRepository.deleteAll();
-        } else if (brandRepository.count() > 0) {
-            return;
         }
 
         ResponseEntity<List<BrandDTO>> response = restTemplate.exchange(
@@ -69,36 +70,20 @@ public class BrandServiceImpl implements BrandService {
                 new ParameterizedTypeReference<>() {}
         );
 
-        if (!response.getStatusCode().is2xxSuccessful() || response.getBody() == null) return;
+        if (!response.getStatusCode().is2xxSuccessful() || response.getBody() == null) {
+            return;
+        }
 
-        List<BrandDTO> dtos = response.getBody();
-
-        for (BrandDTO dto : dtos) {
-            Brand existing = brandRepository.findById(dto.getId()).orElse(null);
-
-            if (existing == null) {
-                Brand newBrand = Brand.builder()
-                        .id(dto.getId())
-                        .name(dto.getName())
-                        .modelsFile(dto.getModelsFile())
+        List<BrandDTO> brands = response.getBody();
+        if (brands == null) { return; }
+        for (BrandDTO brandDTO : brands) {
+            if (brandRepository.findById(brandDTO.getId()).isEmpty()) {
+                Brand brand = Brand.builder()
+                        .id(brandDTO.getId())
+                        .name(brandDTO.getName())
+                        .modelsFile(brandDTO.getModelsFile())
                         .build();
-                brandRepository.save(newBrand);
-            } else {
-                boolean changed = false;
-
-                if (!existing.getName().equals(dto.getName())) {
-                    existing.setName(dto.getName());
-                    changed = true;
-                }
-
-                if (!existing.getModelsFile().equals(dto.getModelsFile())) {
-                    existing.setModelsFile(dto.getModelsFile());
-                    changed = true;
-                }
-
-                if (changed) {
-                    brandRepository.save(existing);
-                }
+                brandRepository.save(brand);
             }
         }
     }
